# classification

./: README.md  classification.py  dataset.py  display_result.py  main.py  page_howto.py  page_main.py  parameter.py  pyproject.toml
data/: data1.csv  data2.csv  data3.csv  data4.csv
