[tool.poetry]
name = "project8"
version = "0.1.0"
description = ""
authors = ["shuntaaaaabbbbb <shutaweb@.gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
streamlit = "^1.36.0"
plotly = "^5.22.0"
lightgbm = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
